# folo

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE  Readme.md  folo.sln
crates/folo/: Cargo.toml  build.rs
crates/folo/benches/: comm_primitives.rs  io.rs  once_event.rs  spawning.rs  win32.rs
crates/folo/examples/: async_file.rs  basic.rs  bencher.rs  client_hyper_with_tokio.rs  default.rs  file_scan.rs  fs.rs  grpc_client_folo.rs  grpc_client_tokio.rs  grpc_server_folo.rs  grpc_server_tokio.rs  grpc_server_tonic.rs  http_server.rs  http_server_folo.rs  http_server_tokio.rs  http_server_windows.rs  hyper_with_folo.rs  hyper_with_tokio.rs  iocp.rs  iocp_raw.rs  linked_basic.rs  linked_box.rs  linked_handle.rs  linked_std_box.rs  linked_thread_local_instance.rs  tasks.rs  tcp.rs  tcp_echo.rs  time.rs
crates/folo/examples/grpc_server_net/: Program.cs
crates/folo/examples/grpc_server_net/Properties/: launchSettings.json
crates/folo/examples/grpc_server_net/Services/: GreeterService.cs
crates/folo/examples/http_server_net/: Program.cs
crates/folo/examples/http_server_net/Properties/: launchSettings.json
crates/folo/src/: __private.rs  agent.rs  async_task_engine.rs  collections.rs  constants.rs  criterion.rs  current_agent.rs  current_executor.rs  entrypoint_result_box.rs  executor.rs  executor_builder.rs  executor_client.rs  fs.rs  hyper.rs  io.rs  lib.rs  linked.rs  local_join.rs  local_result_box.rs  local_task.rs  mem.rs  metrics.rs  net.rs  ready_after_poll.rs  remote_join.rs  remote_result_box.rs  remote_task.rs  rt.rs  sync.rs  time.rs  types.rs  util.rs  windows.rs
crates/folo/src/fs/: error.rs  functions.rs
crates/folo/src/io/: block.rs  buffer.rs  buffer_isolated.rs  buffer_shared.rs  buffer_storage.rs  completion_port.rs  completion_port_shared.rs  driver.rs  driver_shared.rs  error.rs  isolation_mode.rs  operation.rs  operation_result.rs  operation_result_shared.rs  operation_shared.rs  pinned_buffer.rs  pinned_buffer_shared.rs  primitive.rs  waker.rs
crates/folo/src/linked/: __private.rs  block.rs  block_rc.rs  box.rs  linked.rs
crates/folo/src/mem/: drop_policy.rs  pinned_slab.rs  pinned_slab_chain.rs  shared_array_pool.rs  slab_rc.rs  storage.rs
crates/folo/src/mem/storage/: handle.rs  readwrite.rs  test_types.rs  thread_local.rs  thread_local_inline.rs  with_data.rs
crates/folo/src/net/: http_context.rs  http_server.rs  http_sys.rs  tcp_connection.rs  tcp_server.rs  tcp_stream.rs  winsock.rs
crates/folo/src/rt/: agent.rs  async_agent.rs  async_task_engine.rs  builder.rs  current_agent.rs  current_async_agent.rs  current_executor.rs  current_runtime.rs  current_sync_agent.rs  erased_async_task.rs  executor.rs  executor_builder.rs  executor_client.rs  functions.rs  local_join.rs  local_result_box.rs  local_task.rs  remote_join.rs  remote_result_box.rs  remote_task.rs  remote_waker.rs  runtime.rs  runtime_client.rs  sync_agent.rs  types.rs  waker.rs
crates/folo/src/runtime/: agent.rs  async_task_engine.rs  current_agent.rs  current_executor.rs  executor.rs  executor_builder.rs  executor_client.rs  functions.rs  local_join.rs  local_task.rs  remote_join.rs  remote_task.rs
crates/folo/src/sync/: once_event.rs  semaphores.rs
crates/folo/src/time/: clock.rs  clock_control.rs  delay.rs  error.rs  low_precision.rs  periodic_timer.rs  stopwatch.rs  timers.rs  ultra_low_precision.rs
crates/folo/src/util/: local_cell.rs  low_precision_instant.rs  once_event.rs  owned_handle.rs  pinned_slab.rs  pinned_slab_chain.rs  ptr_hash.rs  send_handle.rs  slab_rc.rs  thread_safe.rs  with_ref_count.rs
crates/folo/src/windows/: owned_handle.rs
crates/folo/tests/: join.rs  shutdown.rs  spawning.rs
crates/folo_decl_macros/: Cargo.toml
crates/folo_decl_macros/src/: linked.rs
crates/folo_proc_macros/: Cargo.toml
crates/folo_proc_macros/src/: lib.rs
crates/folo_proc_macros_impl/: Cargo.toml
crates/folo_proc_macros_impl/src/: folo_entrypoint.rs  lib.rs  linked_object.rs  syn_helpers.rs  util.rs
crates/folo_test_client/: Cargo.toml
crates/folo_test_client/src/: main.rs
crates/folo_testing/: Cargo.toml
crates/folo_testing/src/: lib.rs  test_setup.rs
doc/: ExecutorRelations.wsd  FileIo.wsd
examples/: default.rs
k6/: 20kb_10_0_0_8.js  20kb_localhost.js  64mb_10_0_0_8.js  64mb_10_0_0_8_reuse.js  grpc.js  grpc_10_0_0_8.js  root_10_0_0_8.js  root_10_0_0_8_reuse.js
src/: async_task_engine.rs  current_executor.rs  engine.rs  executor.rs  executor_client.rs  functions.rs  lib.rs  local_result_box.rs  local_task.rs  ready_after_poll.rs  remote_join.rs  remote_result_box.rs  result_box.rs
