[workspace]
members = [
    "crates/folo",
]
default-members = [
    "crates/folo",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Sander Saares <sander@saares.eu>"]
license-file = "LICENSE"
description = "Runtime engine for Rust services"
readme = "Readme.md"
version = "0.1.0-pre"