[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Sander Saares <sander@saares.eu>"]
license = "MIT"
description = "Runtime engine for Rust services"
readme = "Readme.md"
version = "0.1.0-pre"
repository = "https://github.com/sandersaares/folo"
categories = ["asynchronous", "concurrency"]

[profile.release]
debug = "full"
panic = "abort"