[package]
name = "folo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
crate-type = ["lib"]

[features]
# Enables Criterion integration (providing an async runtime adapter for it).
criterion = ["dep:criterion"]

[dependencies]
criterion = { version = "0", optional = true }
folo_decl_macros = { path = "../folo_decl_macros", version = "0.1.0-main" }
folo_proc_macros = { path = "../folo_proc_macros", version = "0.1.0-main" }
futures = { version = "0", default-features = false, features = [
    "alloc",
    "executor",
    "std",
] }
negative-impl = "0"
oneshot = "0"
pin-project = "1"
pinned_slab = "0"
thiserror = "1"
tracing = "0"
windows = { version = "0", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
windows-result = "0"

[dev-dependencies]
criterion = { version = "0", features = ["async_tokio"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
tracing-subscriber = "0"

[[bench]]
name = "spawning"
harness = false

[[bench]]
name = "io"
harness = false
