[package]
name = "folo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
crate-type = ["lib"]

[features]
# Enables Criterion integration (providing an async runtime adapter for it).
criterion = ["dep:criterion"]

[dependencies]
core_affinity = "0"
criterion = { version = "0", optional = true }
crossbeam = "0"
folo_decl_macros = { path = "../folo_decl_macros", version = "0.1.0-main" }
folo_proc_macros = { path = "../folo_proc_macros", version = "0.1.0-main" }
futures = { version = "0", default-features = false, features = [
    "alloc",
    "executor",
    "std",
] }
futures-concurrency = "7"
negative-impl = "0"
oneshot = { version = "0", features = ["async"] }
pin-project = "1"
thiserror = "1"
tracing = "0"
windows = { version = "0", features = [
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
windows-result = "0"

[dev-dependencies]
criterion = { version = "0", features = ["async_tokio"] }
folo_testing = { path = "../folo_testing", version = "0.1.0-main" }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
tracing-subscriber = "0"

[[bench]]
name = "comm_primitives"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "once_event"
harness = false

[[bench]]
name = "spawning"
harness = false

[[bench]]
name = "win32"
harness = false
