[package]
name = "folo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
crate-type = ["lib"]

[features]
# Enables Criterion integration (providing an async runtime adapter for it).
criterion = ["dep:criterion"]
fakes = []
hyper = ["dep:hyper"]

# Default features
default = ["hyper"]

[dependencies]
core_affinity = "0"
criterion = { version = "0", optional = true }
crossbeam = "0"
folo_decl_macros = { path = "../folo_decl_macros", version = "0.1.0-main" }
folo_proc_macros = { path = "../folo_proc_macros", version = "0.1.0-main" }
futures = { version = "0", default-features = false, features = [
    "alloc",
    "async-await",
    "executor",
    "std",
] }
hyper = { version = "1.4.1", features = [
    "http1",
    "http2",
    "client",
    "server",
], optional = true }
negative-impl = "0"
oneshot = { version = "0", features = ["async"] }
pin-project = "1"
thiserror = "1"
tracing = "0"
windows = { version = "0", features = [
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
windows-result = "0"

[dev-dependencies]
criterion = { version = "0", features = ["async_tokio"] }
folo_testing = { path = "../folo_testing", version = "0.1.0-main" }
tokio = { version = "1", features = ["fs", "net", "macros", "rt-multi-thread"] }
tracing-appender = "0"
tracing-subscriber = "0"
hyper-util = { version = "0.1.8", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
http = "1.0"
http-body = "1.0.0"
bytes = "1.7.1"
http-body-util = "0.1.0"

[[bench]]
name = "comm_primitives"
harness = false

[[bench]]
name = "io"
harness = false
required-features = ["criterion"]

[[bench]]
name = "once_event"
harness = false

[[bench]]
name = "spawning"
harness = false
required-features = ["criterion"]

[[bench]]
name = "win32"
harness = false
