[package]
name = "folo_proc_macros"
description = "Internal dependency of the 'folo' crate - do not reference directly."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
bench = false
proc-macro = true

[dependencies]
folo_proc_macros_impl = { path = "../folo_proc_macros_impl", version = "0.1.0-main" }