[package]
name = "folo_test_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Internal dev utility used in testing the 'folo' crate."
readme.workspace = true
repository.workspace = true
categories.workspace = true

[features]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
